--- a/index.html
+++ b/index.html
@@ -37,20 +37,24 @@
 				</h2>			
 			</div>
 			<ul class="header__brand__media">
-				<li>
-					linkedin
+				<li class="header__brand__media_li header__brand__media_li--linkedin">
+					<!-- linkedin -->
+					<p class="header__brand__media_li_logo">in</p>
 				</li>
-				<li>
-					twitter
+				<li class="header__brand__media_li">
+					<!-- twitter -->
+					<img src="./media/twitter.png">
 				</li>
-				<li>
-					pintrest
+				<li class="header__brand__media_li">
+					<img src="./media/pintrest.png">
 				</li>
-				<li>
-					google plus
+				<li class="header__brand__media_li">
+					<p class="header__brand__media_li--google-plus">
+						g+
+					</p>
 				</li>
-				<li>
-					spotify
+				<li class="header__brand__media_li header__brand__media_li--spotify">
+					<img src="./media/spotify.png">
 				</li>
 			</ul>
 		</div>
@@ -231,11 +235,11 @@
 			<div class="main__media_column main__media__contact">
 				<h1>contact us</h1>
 				<form class="main__media__contact_form">
-					<input type="text" name="">
-					<input type="email" name="">
-					<input type="subject" name="">
+					<input type="text" name="" placeholder="name">
+					<input type="email" name="" placeholder="email">
+					<input type="password" name="" placeholder="password">
 					<textarea rows="4" cols="50">
-						Message
+						message
 					</textarea>
 					<button type="submit" class="main__media__contact_form_button">submit</button>
 				</form>
